# experiments

./: README.md  primes.py  squares.py
apple_metadata/: README.md  pyproject.toml  wrapper.sh
apple_metadata/docs/: MacOS_ GetCatInfo.html  appledouble_files.md  appledouble_types.txt  flags_to_labels.txt  kaitai_struct.md  kazakov_parser.md
apple_metadata/src/samba_labels/: __init__.py  apple_single_double.py  cli.py  exiftooling.py  processor.py  utility.py
apple_metadata/tests/: __init__.py  test_processor.py
c++_easy_steps/: README.md  cinput.cpp  strings.cpp
jumpstarting_c/: .gitignore  README.md
programming/python/: binaryXOR.py  cardsort.py  employee.py  reverseprint.py  squares.py  stdintest.py  xmlwriter.py
programming/python/raptors/: raptors.txt
python/: cardsort.py  urlToWebloc.py
raptors/: README-raptors.md  raptors.py
sqlite/: sqlitest.py
video_conv/: h265-batch-conv.sh
xml/: xmlparser.py
