[tool.poetry]
name = "samba-labels"
version = "0.1.0"
description = "Tool for transferring Mac Finder labels on Samba shares to Linux xattrs"
authors = ["Jachimo <jachimo@noreply.github.com>"]
readme = "README.md"
packages = [{include = "samba_labels", from = "src"}]

[tool.poetry.scripts]
dump_file = "samba_labels.cli:dump_file"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
kaitaistruct = "^0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
